--- a/practice/styles/styles.css
+++ b/practice/styles/styles.css
@@ -1,4 +1,7 @@
-body {
+h1 {
+    text-align: center;
+}
+nav, footer {
     text-align: center;
 }
 nav {
@@ -8,9 +11,12 @@ nav {
 a {
     color: white;
     margin: 40px;
+    font-size: 1.5em;
 }
 img {
-    width: 800px;
+    width: 80%;
+    display: block;
+    margin: 0 auto;
     border: 4px solid steelblue;
 }
 p {
@@ -25,6 +31,31 @@ footer {
     line-height: 1.5em;
 }
 #active {
+    background-color: white;
+    color: steelblue;
+}
+img {
+    width: 80%;
+}
+p {
+    width: 80%;
+}
+
+main p {
+    width: 80%;
+    margin: 50px auto;
+    text-align: center;
+}
+footer {
+    background-color: steelblue;
+    color: white;
+    padding: 10px;
+}
+footer p {
+    font-size: 20px;
+    margin: 20px auto;
+}
+a:hover {
     background-color: white;
     color: steelblue;
 }
