--- a/practice/styles/styles.css
+++ b/practice/styles/styles.css
@@ -1,17 +1,19 @@
 h1 {
     text-align: center;
+    margin: 50px 0;
 }
 nav, footer {
     text-align: center;
 }
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 25px;
 }
 a {
     color: white;
     margin: 40px;
     font-size: 1.5em;
+    padding: 25px;
 }
 img {
     width: 80%;
@@ -21,6 +23,7 @@ img {
 }
 p {
     padding: 10px;
+    margin: 50px auto;
 }
 footer {
     background-color: steelblue;
@@ -36,6 +39,7 @@ footer {
 }
 img {
     width: 80%;
+    border: 4px solid steelblue;
 }
 p {
     width: 80%;
@@ -54,8 +58,12 @@ footer {
 footer p {
     font-size: 20px;
     margin: 20px auto;
+    padding: 25px;
 }
 a:hover {
     background-color: white;
     color: steelblue;
+}
+body {
+    margin: 0;
 }
