--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -14,8 +14,8 @@ Fonts are separated by a & */
   --accent2-color: #42253B;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: Josefin;
-  --paragraph-font: Inter, Helvetica, sans-serif;
+  --heading-font: 'Josefin Sans';
+  --paragraph-font: 'Inter', Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #28666E;  /* headlines on a white background */ 
