--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -15,6 +15,7 @@ nav a {
 }
 #hero_msg h1, #hero_msg h4 {
     text-align: center;
+    color: #D9D3D4;
 }
 .button_box {
     text-align: center;
@@ -24,7 +25,7 @@ main section {
 }
 #background {
     height: 725px;
-    background-color: white;
+    background-color: #28666E;
 }
 body {
     background-color: white;
@@ -35,6 +36,8 @@ body {
 }
 header {
     background-color: #F6AE2D;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 nav a:hover {
     background-color: #28666E;
@@ -63,6 +66,9 @@ footer {
     color: #42253B;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 .home_title {
     color: #28666E;
@@ -110,6 +116,8 @@ h2 {
 }
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 footer .social img {
     padding-top: 15px;
@@ -119,7 +127,114 @@ footer .social img {
 }
 .card_img {
     border: 10px solid #42253B;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #42253B;
 }
 main section img {
     box-sizing: border-box;
 }
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero_box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero_msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+.home_grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.card_img, .mountains {
+    width: 100%;
+}
+.rivers_card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping_card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids_card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #42253B;
+}
+.msg {
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #42253B;
+}
+.card_img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+
+
+
+
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+      
