--- a/travelmoabsite/styles/index.css
+++ b/travelmoabsite/styles/index.css
@@ -138,6 +138,18 @@ footer {
     grid-template-columns: 100px 100px 100px 100px 100px 25px;
     grid-template-rows: 50px 50px 50px 50px 50px 20px 20px 20px 20px 20px 30px 10px;
 }
+
+
+
+
+
+
+
+
+
+
+/* Dining CSS */
+
 .view_morea {
     grid-column: 4/7;
     text-align: right;
@@ -242,4 +254,51 @@ footer {
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+
+.dining_grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 175px 100px 500px;
+    margin: 30px;
+    color:#011627;
+    
+}
+.restaurants {
+    grid-column: 1/5;
+    grid-row: 2/3;
+}
+.overview {
+    grid-column: 1/5;
+    grid-row: 1/2;
+}
+.column1 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    text-align: center;
+}
+.column2 {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    text-align: center;
+}
+.column3 {
+    grid-column: 3/4;
+    grid-row: 3/4;
+    text-align: center;
+}
+.column4 {
+    grid-column: 4/5;
+    grid-row: 3/4;
+    text-align: center;
+}
+
+.dining_grid h4 {
+    font-family: 'Cardo', arial, sans-serif;
+    font-size: 35px;
+}
+
+.column1, .column2, .column3, .column4 {
+    font-size: 18px;
+    padding: 26px;
 }
